back to WebFlux from Kafka